--- a/inplace/templates/inplace/inplace_list.html
+++ b/inplace/templates/inplace/inplace_list.html
@@ -65,9 +65,9 @@
         background: linear-gradient(326deg, rgba(17,6,35,1) 0%, rgba(71,7,20,1) 96%);">
             <div class="carousel-item-screen">
                 <div class="carousel-item-content">
-                    <h1><b>About <font color="yellow">Inplace</font> </h1>
+                    <h1 class="text-2xl mt-5 md:text-5xl md:mt-2"><b>About <font color="yellow">Inplace</font> </h1>
                     <br></b>
-                    <p>
+                    <p  class="text-lg md:text-2xl">
                         Inplace is the flagship publication of Cepstrum, IITG. This series features articles by junior and senior year students from the EEE department about their internship and placement experiences. The articles cover test preparation, work experience and everything in between.
                     </p>
                 </div>
