--- a/inked_intellects/templates/inked_intellects/inked_intellects_list.html
+++ b/inked_intellects/templates/inked_intellects/inked_intellects_list.html
@@ -65,9 +65,9 @@
         background: linear-gradient(326deg, rgba(6,35,30,1) 0%, rgba(5,54,29,1) 96%);">
             <div class="carousel-item-screen">
                 <div class="carousel-item-content">
-                    <h1><b>About <font color="yellow">Inked Intellects</font> </b> </h1>
+                    <h1 class="text-2xl mt-5 md:text-5xl md:mt-2"><b>About <font color="yellow">Inked Intellects</font> </b> </h1>
                     <br>
-                    <p>
+                    <p class="text-lg md:text-2xl">
                         This series features articles by sophomores of the EEE department, chronicling their experiences at various conferences and contests as well as their adventures in exploring new fields and domains like Finance, Competitive Programming and Machine Learning.
                     </p>
 
