--- a/templates/allauth/socialaccount/snippets/provider_list.html
+++ b/templates/allauth/socialaccount/snippets/provider_list.html
@@ -3,9 +3,24 @@
     <a title="{{brand.name}}" class="socialaccount_provider {{provider.id}} {{brand.id}}" href="{% provider_login_url provider.id openid=brand.openid_url process=process %}">{{brand.name}}</a>
 </li>
 {% endfor %} {% endif %}
+<style>
+    .signin{
+        background-color: rgb(0, 0, 0, 0.4);
+    }
+    .mslogo{
+        max-width: fit-content;
+        max-height: fit-content;
+    }
+</style>
 <li>
-    <a class="btn btn-primary btn-lg" title="{{provider.name}}" class="socialaccount_provider {{provider.id}}" href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-microsoft" viewBox="0 0 16 16">
+    <a class="signin p-2 border-2 border-radius-2 inline text-white px-3 pt-3 flex gap-3 mt-5 md:w-2/5 text-sm md:text-3xl h-12 md:h-24" title="{{provider.name}}" class="socialaccount_provider {{provider.id}}" href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">
+        <img class="mslogo mb-2" alt="Microsoft logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Microsoft_logo.svg/32px-Microsoft_logo.svg.png">
+        <p class="mb-3 md:mb-0 md:mt-1">Sign In with Outlook</p>
+    </a>
+
+    <!-- <a class="btn btn-primary btn-lg capitalise" title="{{provider.name}}" class="socialaccount_provider {{provider.id}}" href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-microsoft" viewBox="0 0 16 16">
         <path d="M7.462 0H0v7.19h7.462V0zM16 0H8.538v7.19H16V0zM7.462 8.211H0V16h7.462V8.211zm8.538 0H8.538V16H16V8.211z"/>
-      </svg> {{provider.id}}</a>
+        
+      </svg> {{provider.id}}</a> -->
 </li>
 {% endfor %}
