--- a/team/templates/team_list.html
+++ b/team/templates/team_list.html
@@ -58,7 +58,7 @@
 my-carousel" data-ride="carousel">
     <div class="carousel-inner" role="listbox">
         <!-- <div class="carousel-item active" style="background-image: {% for i in team_list %} {% if i.category.name == 'Cover' %}url('{{i.pic.url}}'){% endif %} {% endfor %} "> -->
-        <div class="carousel-item active" style="background-image: url('/cepstrum/media/team/KP.jfif')">
+        <div class="carousel-item active" style="background-image: url('/cepstrum/static/team/team.jpg')">
             <!-- <div style="text-align: center; padding-top: 40%;"> -->
             <!-- <button type="button" class="btn btn-outline-primary btn-lg" data-toggle="modal" data-target=".bd-example-modal-xl">Team EXECUTIVES</button>
       <button type="button" class="btn btn-outline-primary btn-lg" data-toggle="modal" data-target=".bd-example-modal-xl1">4th Year</button>
