Navbar fixes Inplace background chasnged

--- a/inphase/templates/inphase/inphase_list.html
+++ b/inphase/templates/inphase/inphase_list.html
@@ -13,6 +13,9 @@
         /* margin-top: 20%;
   margin-left: 15%;
   margin-right: 30%; */
+ 
+   text-align: justify;
+        width: 75%;
         font-size: 24px;
     }
     .carousel-item-screen {
@@ -20,7 +23,9 @@
         background-color: rgba(0, 0, 0, 0.6);
         width: 100%;
         height: 100%;
-        padding: 15% 20% 0 15%;
+        padding: 15% 0% 0 0%;
+        display: flex;
+        justify-content: center;
     }
 </style>
 
