--- a/talk/templates/talk/home.html
+++ b/talk/templates/talk/home.html
@@ -20,17 +20,20 @@
         /* margin-top: 20%;
   margin-left: 15%;
   margin-right: 30%; */
+ 
+   text-align: justify;
+        width: 75%;
         font-size: 24px;
     }
-    
     .carousel-item-screen {
         color: white;
         background-color: rgba(0, 0, 0, 0.6);
         width: 100%;
         height: 100%;
-        padding: 15% 20% 0 15%;
+        padding: 15% 0% 0 0%;
+        display: flex;
+        justify-content: center;
     }
-    
     .link-button {
         color: white;
         background-color: #555555;
