--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -21,15 +21,19 @@
         /* margin-top: 20%;
   margin-left: 15%;
   margin-right: 30%; */
+ 
+   text-align: justify;
+        width: 75%;
         font-size: 24px;
     }
-    
     .carousel-item-screen {
         color: white;
         background-color: rgba(0, 0, 0, 0.6);
         width: 100%;
         height: 100%;
-        padding: 10% 20% 0 15%;
+        padding: 15% 0% 0 0%;
+        display: flex;
+        justify-content: center;
     }
 </style>
 
