--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -29,7 +29,7 @@
         /* margin-top: 20%;
   margin-left: 15%;
   margin-right: 30%; */
-        font-size: 24px;
+        font-size: 2vh;
     }
     
     .carousel-item-screen {
