--- a/celebration/templates/celebration/celebration_detail.html
+++ b/celebration/templates/celebration/celebration_detail.html
@@ -99,20 +99,25 @@
   margin-left: 15%;
   margin-right: 30%; */
  
-   text-align: justify;
+   text-align: center;
         width: 75%;
-        font-size: 24px;
+        font-size: 2vh;
     }
     .carousel-item-screen {
         color: white;
         background-color: rgba(0, 0, 0, 0.6);
         width: 100%;
         height: 100%;
-        padding: 15% 0% 0 0%;
+        /* padding: 15% 0% 0 0%; */
         display: flex;
         justify-content: center;
+        align-items: center;
     }
-    
+    @media  screen and (max-width:1000px) {
+       .carousel-item{
+        height: 92.4vh;
+       }
+    }
     .link-button {
         color: white;
         background-color: #555555;
@@ -144,9 +149,9 @@
         url('{{object.pic.url}}');">
             <div class="carousel-item-screen">
                 <div class="carousel-item-content">
-                    <h1>{{object.name|safe}}</h1>
+                    <h1 style="color:yellow  ;" class="text-2xl mt-5 md:text-5xl">{{object.name|safe}}</h1>
                     <div class="addthis_inline_share_toolbox"></div><br><br>
-                    <h5>{{object.desc|safe}}</h5>
+                    <h5 class="text-lg md:text-2xl">{{object.desc|safe}}</h5>
                 </div>
 
 
