--- a/inked_intellects/templates/inked_intellects/inked_intellects_list.html
+++ b/inked_intellects/templates/inked_intellects/inked_intellects_list.html
@@ -24,18 +24,28 @@
  
    text-align: justify;
         width: 75%;
-        font-size: 24px;
+        font-size: 2vh;
+    }
+    .container1{
+        margin-right: 0;
+        width: 100%;
+        margin-left: 0;
+        padding: 0% 5%;
+        padding-bottom: 10vh;
     }
     .carousel-item-screen {
         color: white;
         background-color: rgba(0, 0, 0, 0.6);
         width: 100%;
-        height: 100%;
-        padding: 15% 0% 0 0%;
+        height: 100%;align-items:center;
         display: flex;
         justify-content: center;
     }
-    
+    @media  screen and (max-width:1000px) {
+       .carousel-item{
+        height: 92.4vh;
+       }
+    }
     .link-button {
         color: white;
         background-color: #555555;
@@ -53,6 +63,10 @@
         text-decoration: none;
         padding: 5px 10px;
         border-radius: 5px;
+    }
+    .col{
+        display: flex;
+        justify-content:center;
     }
 </style>
 
@@ -100,9 +114,8 @@
 </div>
 
 {% endblock %} {% block content %}
-<br><br><br><br>
 
-<div class="container" style="align-items: center;">
+<div class="container1 row row-cols-1 row-cols-xl-2" style=" margin-top: 15vh;align-items:center;">
     {% for i in inked_list %}
 
     <div class="col">
