--- a/inplace/templates/inplace/inplace_list.html
+++ b/inplace/templates/inplace/inplace_list.html
@@ -22,16 +22,30 @@
  
    text-align: justify;
         width: 75%;
-        font-size: 24px;
+        font-size: 2vh;
     }
     .carousel-item-screen {
         color: white;
         background-color: rgba(0, 0, 0, 0.6);
         width: 100%;
-        height: 100%;
-        padding: 15% 0% 0 0%;
+        height: 100%;align-items:center;
         display: flex;
         justify-content: center;
+    }
+    @media  screen and (max-width:1000px) {
+       .carousel-item{
+        height: 92.4vh;
+       }
+    }
+    .card-img-top{
+        aspect-ratio: 3/2 !important;
+    }
+    .container1{
+        margin-right: 0;
+        width: 100%;
+        margin-left: 0;
+        padding: 0% 5%;
+        padding-bottom: 10vh;
     }
     .link-button {
         color: white;
@@ -94,9 +108,8 @@
 </div>
 
 {% endblock %} {% block content %}
-<br><br><br><br>
 
-<div class="container" style="align-items: center; ">
+<div class="container1 row row-cols-1 row-cols-md-2" style=" margin-top: 15vh;align-items:center;">
     {% for i in post_list %}
 
     <div class="col">
