--- a/inplex/templates/inplex/create_experience.html
+++ b/inplex/templates/inplex/create_experience.html
@@ -134,7 +134,7 @@
         /* margin-top: 20%;
   margin-left: 15%;
   margin-right: 30%; */
-        font-size: 24px;
+        font-size: 2vh;
     }
     
     .carousel-item-screen {
