--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -21,7 +21,7 @@
         /* margin-top: 20%;
   margin-left: 15%;
   margin-right: 30%; */
-        font-size: 24px;
+        font-size: 2vh;
     }
     
     .link-button {
