--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -24,17 +24,17 @@
  
    text-align: justify;
         width: 75%;
-        font-size: 24px;
+        font-size: 2vh;
     }
     .carousel-item-screen {
         color: white;
         background-color: rgba(0, 0, 0, 0.6);
         width: 100%;
-        height: 100%;
-        padding: 15% 0% 0 0%;
+        height: 100%;align-items:center;
         display: flex;
         justify-content: center;
     }
+    
 </style>
 
 {% endblock %} {% block carousel %} {% if user.is_authenticated %}
