--- a/celebration/templates/celebration/celebration_detail.html
+++ b/celebration/templates/celebration/celebration_detail.html
@@ -1,29 +1,34 @@
 {% extends 'base.html' %} {% block title %} {{object}} | Cepstrum {% endblock title %} {% block css %}
 <style>
     div#carousel {
-        perspective: 100%;
+      width: 80%;
         background: #ffffff;
-        padding-top: 1%;
-        padding-bottom: 10%;
+  justify-content: center;
+        
         font-size: 0;
-        margin-bottom: 3rem;
+        margin-top: 10vh;
         overflow: hidden;
+        background-color: rgba(0, 0, 0, 1);
+padding-bottom: 10vh;
+padding-top: 10vh;
     }
     
     figure#spinner {
         transform-style: preserve-3d;
-        height: 300px;
+        height: 250px;
         transform-origin: 50% 50% -500px;
         transition: 1s;
+        background-color: rgba(0, 0, 0, 1);
     }
     
     figure#spinner img {
-        width: 40%;
+        width:43.8%;
         max-width: 425px;
         position: absolute;
         left: 30%;
         transform-origin: 50% 50% -500px;
         outline: 1px solid transparent;
+        margin-right: 2%;
     }
     
     figure#spinner img:nth-child(1) {
@@ -176,6 +181,8 @@
 </div>
 
 {% endblock %} {% block content %}
+<div class="flex" style="width:100%;padding: 0% 5%; background-color: rgba(0, 0, 0, 1);justify-content: space-evenly;">
+    <div style="width:5%;justify-content: center;align-items: center;" class="flex"><span style="float:left;font-size: 10vh; color: yellow;" class="ss-icon" onclick="galleryspin('-')">&lt;</span></div>
 <div id="carousel">
 
     {% for i in pictures_list %} {% if i.id == object.id %}
@@ -191,11 +198,12 @@
     </figure>
     {% endif %} {% endfor %}
 
-    <br><br>
+    
 </div>
-<span style="float:left" class="ss-icon" onclick="galleryspin('-')">&lt;</span>
-<span style="float:right" class="ss-icon" onclick="galleryspin('')">&gt;</span>
-<br><br> {% endblock content %} {% block js %}
+
+<div style="justify-content: center;align-items: center;" class="flex"><span style="float:right; font-size: 10vh; color: yellow;" class="ss-icon" onclick="galleryspin('')">&gt;</span></div>
+</div>
+ {% endblock content %} {% block js %}
 <script>
     var angle = 0;
 
