--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="css/stylewise.css">
+    <link rel="icon" href="/cepstrum/static/images/Group1.png"  type="image/icon type">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>{% block title %} {% endblock title %}</title>
@@ -38,6 +39,10 @@
     body {
         background-color: white;
         color: black;
+    }
+    .nav-link{
+        padding-left: 1vw !important;
+        padding-right: 1vw !important;
     }
 
     @media only screen and (max-width: 1000px) {
@@ -77,7 +82,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent" style="justify-content: end;">
-                <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav mb-2 mb-lg-0">
 
                     <!-- <li class="nav-item dropdown active" class="">
           <a class="nav-link dropdown-toggle" href="" id="dropdownMenuButton" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -175,7 +180,7 @@
                     </li>
                     {% endif %}
                 </ul>
-                <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav  mb-2 mb-lg-0">
                     {% if user.is_authenticated %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
